fix(symbol frames): align non-image answers to radio buttons

--- a/Content/Styles/SymbolFrames/Site.scss
+++ b/Content/Styles/SymbolFrames/Site.scss
@@ -52,7 +52,6 @@ html, body {
 }
 
 .number {
-  margin: 50px;
   margin-top: 0px;
   padding: 5px;
 }
@@ -242,7 +241,6 @@ table {
 
 .optionContainer p{
   position: relative;
-  bottom: 7px;
 }
 
 .optionsContainer{
